--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 
 <body>
     <div class="header">
-
+        <div class="logo">
+            <!-- aqui va la imagen del icono -->
+            LOGO
+        </div>
+        <div class="links">
+            <ul>
+                <li><a href="#">header link one</a> </li>
+                <li><a href="#">header link two</a> </li>
+                <li><a href="#">header link three</a> </li>
+            </ul>
+        </div>
     </div>
     <div class="content"></div>
     <div class="footer"></div>
