Add an icon but break the header, need fix

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
 <body>
     <div class="header">
+        <img class="icon" src="images/chinchilla.png" alt="Chinchilla icons created
+            by Freepik - Flaticon">
         <div class="logo">
-            <!-- aqui va la imagen del icono -->
-            LOGO
+            <a href="https://www.flaticon.com/free-icons/chinchilla" title="chinchilla icons">Chinchilla icons created
+                by Freepik - Flaticon</a>
+            Chunkiest Fluffs
         </div>
         <div class="links">
             <ul>
